STYLE - Change in table style

--- a/templates/animal/adicionar.html.twig
+++ b/templates/animal/adicionar.html.twig
@@ -20,7 +20,7 @@
             </div>
             {{ include('includes/alertsADD.html.twig') }}
         </div>
-        {{ include('animal/lista.html.twig',animais) }}
+        {{ include('animal/lista.html.twig') }}
         {% block lista %}{% endblock %}
     </div>
 
