--- a/templates/animal/abate.html.twig
+++ b/templates/animal/abate.html.twig
@@ -2,13 +2,13 @@
 {% block body %}
 
     <div class="container" style="padding-top: 77px">
-        <h4>{{ titulo }}</h4>
+        <h2>{{ titulo }}</h2>
         {{ include('includes/alertsAbate.hmtl.twig') }}
         <div class="table-responsive">
-            <table class="table">
+            <table class="table table-bordered border-warning table-striped ">
                 <thead>
                     <tr>
-                        <th scope="row">#</th>
+                        <th scope="col">#</th>
                         <th scope="col">Leite por semana(L)</th>
                         <th scope="col">Ração por semana(Kg)</th>
                         <th scope="col">Peso(Kg)</th>
@@ -17,16 +17,16 @@
                         <th scope="col">Abater</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="table-group-divider">
                 {% for animal in animais %}
                     <tr>
-                        <td>{{ animal.id }}</td>
-                        <td>{{ animal.leite }}</td>
-                        <td>{{ animal.racao }}</td>
-                        <td>{{ animal.peso }}</td>
-                        <td>{{ animal.nascimento|date("d/m/Y") }}</td>
-                        <td>{% if animal.situacao == 1%}Vivo{% else %}Abatido{% endif %}</td>
-                        <td> <a id="botao" class="btn btn-warning" href="{{ path('animal_abater',{id: animal.id}) }}">Abater</a> </td>
+                        <th scope="row">{{ animal.id }}</th>
+                        <td class="text-center">{{ animal.leite }}</td>
+                        <td class="text-center">{{ animal.racao }}</td>
+                        <td class="text-center">{{ animal.peso }}</td>
+                        <td class="text-center">{{ animal.nascimento|date("d/m/Y") }}</td>
+                        <td class="text-center">{% if animal.situacao == 1%}Vivo{% else %}Abatido{% endif %}</td>
+                        <td class="text-center"> <a id="botao" class="btn btn-warning" href="{{ path('animal_abater',{id: animal.id}) }}">Abater</a> </td>
                     </tr>
                 {% endfor %}
 
@@ -36,5 +36,6 @@
                 </tfoot>
             </table>
         </div>
+        {{ knp_pagination_render(animais) }}
     </div>
 {% endblock %}
