--- a/templates/homePage.html.twig
+++ b/templates/homePage.html.twig
@@ -1,26 +1,27 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-        <div class="container" style="padding-top: 77px">
-            <div class="row justify-content-between">
-                <div class="card border-warning mb-3 ms-3" style="max-width: 18rem; ">
-                    <div class="card-header"><h6>Produção de leite semanal</h6></div>
-                    <div class="card-body pt-2 pb-0">
-                        <h5 class="card-title text-center">{{ producao_leite}} L</h5>
+        <div class="container justify-content-center" style="padding-top: 77px">
+            <h2 class="text-center my-3 ">Relatórios da semana</h2>
+            <div class="m-auto">
+                <div class="card border-warning m-auto" style="max-width: 55rem; ">
+                    <div class="card-header"><h5>Produção de leite </h5></div>
+                    <div class="card-body">
+                        <h2 class="card-title text-center">{{ producao_leite}} L</h2>
                     </div>
                 </div>
 
-                <div class="card border-warning mb-3 ms-3" style="max-width: 54rem;">
-                    <div class="card-header"><h6 class="text-center">Animais que tenham até 1 ano de
-                            idade e que consumam mais de 500Kg de ração semanalmente</h6></div>
-                    <div class="card-body pt-2 pb-0">
-                        <h5 class="card-title text-center mb-0">{{ relatorio1 }} animais</h5>
+                <div class="card border-warning m-auto my-3" style="max-width: 55rem;">
+                    <div class="card-header"><h5>Animais que tenham até 1 ano de
+                            idade e que consumam mais de 500Kg de ração</h5></div>
+                    <div class="card-body">
+                        <h2 class="card-title text-center ">{{ relatorio1 }}{% if relatorio1 > 1 %} animais{% else %} animal{% endif %}</h2>
                     </div>
                 </div>
 
-                <div class="card border-warning mb-3 ms-3 me-2" style="max-width: 18rem;">
-                    <div class="card-header"><h6>Demanda de ração semanal</h6></div>
-                    <div class="card-body pt-2 pb-0">
-                        <h5 class="card-title text-center">{{ demanda_racao }} kg</h5>
+                <div class="card border-warning m-auto my-3" style="max-width: 55rem;">
+                    <div class="card-header"><h5>Demanda de ração</h5></div>
+                    <div class="card-body">
+                        <h2 class="card-title text-center">{{ demanda_racao }} kg</h2>
                     </div>
                 </div>
 
