STYLE - Home page title change

--- a/templates/homePage.html.twig
+++ b/templates/homePage.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
         <div class="container justify-content-center" style="padding-top: 77px">
-            <h2 class="text-center my-3 ">Relatórios da semana</h2>
+            <h2 class="text-center my-3 ">Relatórios semanais</h2>
             <div class="m-auto">
                 <div class="card border-warning m-auto" style="max-width: 55rem; ">
                     <div class="card-header"><h5>Produção de leite </h5></div>
