FEAT - add code field

--- a/templates/animal/relatorios/abatidos.html.twig
+++ b/templates/animal/relatorios/abatidos.html.twig
@@ -19,7 +19,7 @@
                 <tbody class="table-group-divider">
                 {% for animal in animais %}
                     <tr>
-                        <th scope="row">{{ animal.id }}</th>
+                        <th scope="row">{{ animal.codigo }}</th>
                         <td class="text-center">{{ animal.leite }}</td>
                         <td class="text-center">{{ animal.racao }}</td>
                         <td class="text-center">{{ animal.peso }}</td>
