--- a/templates/animal/adicionar.html.twig
+++ b/templates/animal/adicionar.html.twig
@@ -5,7 +5,7 @@
         min-width: 200px;
     }
     .align-items-center{
-        max-width: 1026px;
+        max-width: 1207px;
     }
 </style>
 {% endblock %}
@@ -15,7 +15,7 @@
         <div class="card border-dark m-auto" style="width: fit-content;">
 
             <div class="card-body text-dark">
-                <div class="card-title"><h2 class="d-inline-block">{{ titulo }}</h2> <div class="d-inline-block" style="font-size: 1.5rem"> #{{ id }}</div></div>
+                <div class="card-title"><h2 class="d-inline-block">{{ titulo }}</h2> <div class="d-inline-block" style="font-size: 1.5rem"></div></div>
                 {{ form(form) }}
             </div>
             {{ include('includes/alertsADD.html.twig') }}
