--- a/templates/animal/editar.html.twig
+++ b/templates/animal/editar.html.twig
@@ -5,7 +5,7 @@
         min-width: 200px;
     }
     .align-items-center{
-        max-width: 1026px;
+        max-width: 1207px;
     }
 </style>
 {% endblock %}
@@ -13,7 +13,7 @@
     <div class="container" style="padding-top: 77px">
         <div class="card border-dark" style="width: fit-content">
             <div class="card-body text-dark">
-                <div class="card-title"><h2>{{ titulo }} #{{ id }}</h2></div>
+                <div class="card-title"><h2>{{ titulo }}</h2></div>
                 {{ form(formulario) }}
             </div>
         </div>
