STYLE - Add icon

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Página Inicial{% endblock %}</title>
-        <link rel="icon" href=""> <!-- adicionar o icone do trator aqui -->
+        <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/MuriloNascimentoFerreira/PortalAgro/blob/main/apresentacao-web/img/favicon-16x16.png?raw=true">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
