FIX - Bug na listagem dos animais para abate

--- a/templates/animal/lista.html.twig
+++ b/templates/animal/lista.html.twig
@@ -39,7 +39,7 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Tem certeza que deseja excluir esse animal? #{{ animal.id }}</p>
+                                        <p>Tem certeza que deseja excluir esse animal? #{{ animal.codigo }}</p>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
