STYLE = Reduzir arquivos de alerta

--- a/templates/animal/abate.html.twig
+++ b/templates/animal/abate.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="container" style="padding-top: 77px">
         <h2>{{ titulo }}</h2>
-        {{ include('includes/alertsAbate.hmtl.twig') }}
+        {{ include('includes/alerts.hmtl.twig') }}
         <div class="table-responsive">
             <table class="table table-bordered border-warning table-striped ">
                 <thead>
