--- a/templates/animal/adicionar.html.twig
+++ b/templates/animal/adicionar.html.twig
@@ -17,7 +17,7 @@
                 <div class="card-title"><h2 class="d-inline-block">{{ titulo }}</h2> <div class="d-inline-block" style="font-size: 1.5rem"></div></div>
                     {{ form(form) }}
             </div>
-            {{ include('includes/alertsADD.html.twig') }}
+            {{ include('includes/alertsForm.html.twig') }}
         </div>
         {{ include('animal/lista.html.twig') }}
         {% block lista %}{% endblock %}
