--- a/templates/animal/relatorios/abatidos.html.twig
+++ b/templates/animal/relatorios/abatidos.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <div class="container" style="padding-top: 77px">
-        {{ include('includes/alertsAbate.hmtl.twig') }}
+        {{ include('includes/alerts.hmtl.twig') }}
         <h2>{{ titulo }}</h2>
         <div class="table-responsive">
             <table class="table table-bordered border-warning table-striped">
