--- a/templates/homePage.html.twig
+++ b/templates/homePage.html.twig
@@ -24,7 +24,7 @@
                     <h2 class="card-title text-center">{{ demanda_racao }} kg</h2>
                 </div>
             </div>
-
+        {{ include('includes/alerts.hmtl.twig') }}
         </div>
     </div>
 
