--- a/templates/animal/lista.html.twig
+++ b/templates/animal/lista.html.twig
@@ -1,8 +1,8 @@
 {% block lista %}
     <div class="container">
         <h2 class="mt-3">Lista de Gados</h2>
-        {{ include('includes/alertsRemove.hmtl.twig') }}
-        {{ include('includes/alertsEdit.hmtl.twig') }}
+        {{ include('includes/alerts.hmtl.twig') }}
+        {{ include('includes/alerts.hmtl.twig') }}
         <div class="table-responsive">
             <table class="table table-bordered border-warning table-striped">
                 <thead>
