--- a/templates/includes/alertsForm.html.twig
+++ b/templates/includes/alertsForm.html.twig
@@ -1,4 +1,4 @@
-{% for msg in app.flashes('successEdit') %}
+{% for msg in app.flashes('successForm') %}
     <div class="alert alert-success alert-dismissible d-flex mx-3" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
         <div>
@@ -8,7 +8,7 @@
     </div>
 {% endfor %}
 
-{% for msg in app.flashes('erroEdit') %}
+{% for msg in app.flashes('erroForm') %}
     <div class="alert alert-danger alert-dismissible d-flex mx-3" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
         <div>
